// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`F.later can be called without value 1`] = `
Array [
  Sync {},
  Object {
    "event": Next {
      "value": undefined,
    },
    "tick": 10,
  },
  Object {
    "event": End {},
    "tick": 10,
  },
]
`;

exports[`F.later delays the given value and ends 1`] = `
Array [
  Sync {},
  Object {
    "event": Next {
      "value": "tsers",
    },
    "tick": 10,
  },
  Object {
    "event": End {},
    "tick": 10,
  },
]
`;
